2011-04-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        sort columns in the new json_results.html file
        https://bugs.webkit.org/show_bug.cgi?id=58581

        Also fix padding on TDs and the path to layout tests.

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Dimitri Glazkov.

        queues.webkit.org should display when a bot last passed a patch
        https://bugs.webkit.org/show_bug.cgi?id=58546

        I am suspicious that some of our commit-queue instances are never
        actually passing anything.

        This will let us know if those bots are never passing patches.

        * QueueStatusServer/handlers/queuestatus.py:
        * QueueStatusServer/index.yaml:
        * QueueStatusServer/templates/queuestatus.html:

2011-04-14  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Adam Roben.

        REGRESSION (r83764): webkitpy.layout_tests.port.chromium_win_unittest.ChromiumWinTest.test_default_worker_model fails on apple-windows-13
        https://bugs.webkit.org/show_bug.cgi?id=58545

        Remove platform-specific overrides; the default behavior should
        be working everywhere now, I think.

        * Scripts/webkitpy/layout_tests/port/chromium_win.py:
        * Scripts/webkitpy/layout_tests/port/mac.py:

2011-04-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queues are hitting an exception trying to land when the tree is red
        https://bugs.webkit.org/show_bug.cgi?id=58558

        Just an un-tested (and thus broken) code path from yesterday's changes.

        * Scripts/webkitpy/common/net/layouttestresults.py:
        * Scripts/webkitpy/common/net/layouttestresults_unittest.py:
        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:

2011-04-14  Kevin Ollivier  <kevino@theolliviers.com>
